--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,33 @@ mysocial:
     url: https://www.linkedin.com/in/david-lindell-a434b882
 
 news:
+  - title: Aug 2020
+    text: My thesis presentation "Computational Single-Photon Imaging" received the [honorable mention award at the SIGGRAPH Thesis Fast Forward](https://s2020.siggraph.org/conference/program-events/graduate-cohorts/thesis-fast-forward/)!
+  - title: Aug 2020
+    text: My course on [Computational time-resolved imaging, single-photon sensing, and non-line-of-sight imaging](https://dl.acm.org/doi/abs/10.1145/3388769.3407481) is live at SIGGRAPH! I'm joined by excellent instructors Matthew O'Toole, Ramesh Raskar, and Srinivas Narasimhan.
+  - title: July 2020
+    text: 
+      <div> 
+      <p>
+      Our paper on 
+      <a href="#publication-2020-4" data-toggle="modal">3D imaging with an RGB camera and a single SPAD transient was accepted to ECCV!</a>
+      </p>
+      </div>
+  - title: July 2020
+    text: I was recognized as an [outstanding reviewer](http://cvpr2020.thecvf.com/reviewer-acknowledgements) for CVPR 2020! (136/3663 reviewers selected)
   - title: Jun 2020
-    text: "Three papers accepted recently! [Non-line-of-sight Surface Reconstruction Using the Directional Light-cone Transform](http://www.computationalimaging.org/publications/nlos_dlct/) (Oral @ CVPR 2020), [SPADnet: deep RGB-SPAD sensor fusion assisted by monocular depth estimation](https://www.osapublishing.org/oe/abstract.cfm?uri=oe-28-10-14948) (Optics Express), and [Deep Adaptive LiDAR: End-to-end Optimization of Sampling and Depth Completion at Low Sampling Rates](http://www.computationalimaging.org/publications/deep-adaptive-lidar/) (ICCP 2020)."
+    text: 
+      <div>
+      <p>
+        Three papers accepted recently! 
+        <a href="#publication-2020-1" data-toggle="modal">Non-line-of-sight Surface Reconstruction Using the Directional Light-cone Transform</a>
+        (Oral @ CVPR 2020),
+        <a href="#publication-2020-2" data-toggle="modal">SPADnet&#58; deep RGB-SPAD sensor fusion assisted by monocular depth estimation</a>
+       (Optics Express), and
+        <a href="#publication-2020-3" data-toggle="modal">Deep Adaptive LiDAR&#58; End-to-end Optimization of Sampling and Depth Completion at Low Sampling Rates</a>
+        (ICCP 2020).
+      </p>
+      </div>
   - title: May 2020
     text: I'm co-chairing the 9th annual [Computational Cameras and Displays workshop](http://ccd2020.cms.caltech.edu/) at CVPR 2020 with [Achuta Kadambi](https://visual.ee.ucla.edu/) and [Katie Bouman](http://users.cms.caltech.edu/~klbouman/).
   - title: Mar 2020
@@ -20,7 +45,15 @@ news:
   - title: Jan 2020
     text: My TedxBeaconStreet talk on "a camera to see around corners" is up on [YouTube](https://www.youtube.com/watch?v=ytxZc1WBtjI)!
   - title: May 2019
-    text: Two papers accepted! [Acoustic Non-Line-of-Sight Imaging](http://www.computationalimaging.org/publications/acoustic-non-line-of-sight-imaging) was accepted as an oral to CVPR, and [Wave-Based Non-Line-of-Sight Imaging Using Fast f-k Migration](http://www.computationalimaging.org/publications/nlos-fk/) was accepted to SIGGRAPH.
+    text: 
+      <div>
+      <p>
+      Two papers accepted! 
+      <a href="#publication-2019-2" data-toggle="modal">Acoustic Non-Line-of-Sight Imaging</a>
+      was accepted as an oral to CVPR, and
+      <a href="#publication-2019-3" data-toggle="modal">Wave-Based Non-Line-of-Sight Imaging Using Fast f-k Migration</a>
+      was accepted to SIGGRAPH. </p>
+      </div>
   - title: Jun 2018
     text: I'm interning at the Intelligent Systems Lab at Intel this summer with [Vladlen Koltun](http://vladlen.info).
   - title: Mar 2018
