update news & info

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 2020-1-07 
+  content: Officially graduated! My dissertation is entitled <a href="https://stacks.stanford.edu/file/druid:xg952ns2082/thesis_final-augmented.pdf">Computational Imaging with Single-Photon Detectors</a>.
 - date: 2020-12-03 
   content: Our method to solve integral equations with neural networks is out! <a href="/publications/autoint">AutoInt&#58; Automatic integration for fast neural volume rendering.</a>
 - date: 2020-09-01 
