update gem file

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 2021-8-09
-  content: I'm honored to receive the 2021 SIGGRAPH Outstanding Doctoral Dissertation Honorable Mention Award! Thank you to my mentors, collaborators, friends, and family who have supported me over the years. 
+  content: I'm honored to receive the 2021 SIGGRAPH Outstanding Doctoral Dissertation Honorable Mention Award! 
 - date: 2021-5-07
   content: Our paper on scaling up implicit representations using <a href="/publications/acorn">adaptive coordinate networks</a> is accepted to SIGGRAPH 2021!
 - date: 2021-3-01 
