--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 2021-12-09
+  content: We describe a new type of interpretible neural network with an analytical Fourier spectrum in <a href="/publications/bacon">BACON&#58; Band-Limited Coordinate Networks</a>.
 - date: 2021-8-09
   content: I'm honored to receive the 2021 SIGGRAPH Outstanding Doctoral Dissertation Honorable Mention Award! 
 - date: 2021-5-07
