update news, pubs

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 2021-3-10
+  content: <a href="/publications/bacon">BACON</a> accepted to CVPR 2022!
 - date: 2021-12-09
   content: We describe a new type of interpretible neural network with an analytical Fourier spectrum in <a href="/publications/bacon">BACON&#58; Band-Limited Coordinate Networks</a>.
 - date: 2021-8-09
