--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: David B. Lindell # the website title (if blank, full name will be used in
 first_name: David 
 middle_name: B.
 last_name: Lindell
-email: lindell@stanford.edu
+email: lindell@cs.toronto.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
 
