--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 2022-10-10
+  content: Two papers accepted to NeurIPS 2022--Check out <a href="https://shekshaa.github.io/ResidualMFN/">Residual MFNs</a> and <a href="https://www.computationalimaging.org/publications/gnarf/">Neural Articulated Radiance Fields</a>!
 - date: 2022-3-10
   content: <a href="/publications/bacon">BACON</a> accepted to CVPR 2022!
 - date: 2021-12-09
