--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 2023-3-10
+  content: <a href="https://sparsepose.github.io/">SparsePose</a> accepted to CVPR 2023!
 - date: 2022-10-10
   content: Two papers accepted to NeurIPS 2022--Check out <a href="https://shekshaa.github.io/ResidualMFN/">Residual MFNs</a> and <a href="https://www.computationalimaging.org/publications/gnarf/">Neural Articulated Radiance Fields</a>!
 - date: 2022-3-10
