--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 2023-9-1
+  content: Three new <a href="/people/">students</a> joining the group—welcome Victor, Sherwin, and Maxx!
 - date: 2023-3-10
   content: <a href="https://sparsepose.github.io/">SparsePose</a> accepted to CVPR 2023!
 - date: 2022-10-10
