--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 2023-10-1
-  content: Papers accepted to <a href="https://appleswithacapitala.github.io/">ICCV (oral)</a> and <a href="https://anaghmalik.com/TransientNeRF/">NeurIPS (spotlight)</a>!
+  content: Papers accepted to <a href="https://www.dgp.toronto.edu/projects/ultra-wideband/">ICCV (oral)</a> and <a href="https://anaghmalik.com/TransientNeRF/">NeurIPS (spotlight)</a>!
 - date: 2023-9-1
   content: Three new <a href="/people/">students</a> joining the group—welcome Victor, Sherwin, and Maxx!
 - date: 2023-3-10
