--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 2023-10-4
+  content: <a href="https://www.dgp.toronto.edu/projects/ultra-wideband/">Passive ultra-wideband single-photon imaging</a> wins the best paper award (Marr Prize) at ICCV 2023!!!
 - date: 2023-10-1
   content: Papers accepted to <a href="https://www.dgp.toronto.edu/projects/ultra-wideband/">ICCV (oral)</a> and <a href="https://anaghmalik.com/TransientNeRF/">NeurIPS (spotlight)</a>!
 - date: 2023-9-1
