update cv, pubs, courses, news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 2024-08-20
+  content: I'll be speaking at the <a href="https://neural-fields-beyond-cams.github.io/">ECCV Workshop on Neural Fields Beyond Conventional Cameras</a> on Sep 30.
+- date: 2024-08-01
+  content: Two papers accepted to ECCV—check out <a href="https://anaghmalik.com/FlyingWithPhotons/">Flying with Photons</a> and <a href="https://sherwinbahmani.github.io/tc4d/">TC4D</a>.
+- date: 2024-03-29
+  content: I was awarded the Google Research Scholar Award—a big thanks to Google Research for their support!
 - date: 2024-02-26
   content: Three papers accepted to CVPR—congrats to Kejia, Maxx, Parsa, and Sherwin who led these projects!
 - date: 2023-10-4
