--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: davelindell # your GitHub user name
+# github_username: davelindell # your GitHub user name
 twitter_username: davelindell # your Twitter handle
-linkedin_username: davelindell # your LinkedIn user name
+# linkedin_username: davelindell # your LinkedIn user name
 scholar_userid: _m-BTtAAAAAJ # your Google Scholar ID
 orcid_id: # 0000-0002-6999-3958 # your ORCID ID
 medium_username: # your Medium username
