--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,11 +1,19 @@
+- date: 2024-06-14
+  content: <a href="https://anaghmalik.com/InvProp/">Neural Inverse Rendering from Propagating Light</a> received the <a href="https://cvpr.thecvf.com/Conferences/2025/News/Awards_Press">best student paper award at CVPR 2025</a>!
+- date: 2024-04-25
+  content: I received the <a href="https://news.ontario.ca/en/backgrounder/1005844/ontario-driving-homegrown-innovation-through-the-ontario-research-fund-and-the-early-researcher-awards">Ontario Early Researcher Award</a>!
+- date: 2024-03-05
+  content: Four papers accepted to CVPR (including three selected for oral presentation!)—<a href="https://www.dgp.toronto.edu/projects/opportunistic/">Opportunistic ToF</a>, <a href="https://anaghmalik.com/InvProp/">Neural Inverse Rendering with Propagating Light</a>, <a href="https://felixtaubner.github.io/cap4d/">CAP4D</a>, and <a href="https://snap-research.github.io/ac3d/">AC3D</a>.
 - date: 2024-12-5
   content: I'm speaking about <a href="https://anaghmalik.com/FlyingWithPhotons/">neural rendering at the speed of light</a> at the <a href="https://aisummit2024.kr/">Korea AI Summit 2024</a>.
 - date: 2024-09-25
-  content: Two papers accepted to WACV, one paper accepted to NeurIPS, and one paper accepted to SIGGRAPH Asia.
+  content: Two papers accepted to WACV, one paper accepted to NeurIPS, one paper accepted to SIGGRAPH Asia, and two papers accepted to ICLR.
 - date: 2024-08-20
   content: I'll be speaking at the <a href="https://neural-fields-beyond-cams.github.io/">ECCV Workshop on Neural Fields Beyond Conventional Cameras</a> on Sep 30.
 - date: 2024-08-01
   content: Two papers accepted to ECCV—check out <a href="https://anaghmalik.com/FlyingWithPhotons/">Flying with Photons</a> and <a href="https://sherwinbahmani.github.io/tc4d/">TC4D</a>.
+- date: 2024-05-01
+  content: I received the Sony Faculty Innovation Award and the Sony Focused Research Award!
 - date: 2024-03-29
   content: I received the Google Research Scholar Award—a big thank you to Google Research for their support!
 - date: 2024-02-26
